# asteroid-weatherfetch

./: CMakeLists.txt  README.md  asteroid-weatherfetch.desktop.template
i18n/: asteroid-weatherfetch.de_DE.ts  asteroid-weatherfetch.desktop.h  asteroid-weatherfetch.en_GB.ts
src/: CMakeLists.txt  LocationDialog.qml  UrlFetcher.cpp  UrlFetcher.h  WeatherFetcher.cpp  WeatherFetcher.h  WeatherParser.cpp  WeatherParser.h  WeatherSettings.cpp  WeatherSettings.h  main.cpp  main.qml  resources.qrc  weatherfetch_cli.cpp  weatherparser.cpp  weatherparser.h
